[package]
authors = ["The Rust Project Developers"]
name = "rustc-ap-rustc_target"
version = "717.0.0"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
tracing = "0.1"
rustc_data_structures = { package = "rustc-ap-rustc_data_structures", version = "717.0.0" }
rustc_macros = { package = "rustc-ap-rustc_macros", version = "717.0.0" }
rustc_serialize = { package = "rustc-ap-rustc_serialize", version = "717.0.0" }
rustc_span = { package = "rustc-ap-rustc_span", version = "717.0.0" }
rustc_index = { package = "rustc-ap-rustc_index", version = "717.0.0" }
